# lens-mlx

./: .gitignore  CLAUDE.md  LICENSE  Lens-MLX-Port-Handoff.md  README.md  pyproject.toml
docs/: phase0-findings.md  phase1-findings.md  phase2-findings.md  phase3-findings.md  phase4-findings.md  phase5-findings.md
lens_mlx/: __init__.py  pipeline_mlx.py  resolution.py  scheduler.py
lens_mlx/model/: __init__.py  text_encoder.py  transformer.py
lens_mlx/utils/: __init__.py  weights.py
recipes/: convert_lens.py
refs/configs/: model_index.json  scheduler__scheduler_config.json  text_encoder__config.json  transformer__config.json  vae__config.json
scripts/: generate.py
tests/parity/: capture_goldens.py  diag_encoder_layers.py  diag_experts.py  diag_weight_compare.py  make_bf16_encoder.py  measure_quant.py  test_dit_parity.py  test_dit_quant_parity.py  test_dit_rope_parity.py  test_encoder_parity.py  test_pipeline_parity.py  test_vae_parity.py
tests/smoke/: test_resolution_smoke.py  test_vae_noise_path_smoke.py
